TestProject/src/objects/Leave__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leaves</relationshipLabel>
        <relationshipName>Leaves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EndStart__c</fullName>
        <label>EndStart</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <label>Leave</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LV-{0000}</displayFormat>
        <label>Leave Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>